cilium-demos/canary-progressive-delivery/canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pacman-stable
  labels:
    app.kubernetes.io/name: pacman
    app.kubernetes.io/component: web
    app.kubernetes.io/version: stable
    app.kubernetes.io/part-of: pacman-cilium-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: pacman
      app.kubernetes.io/version: stable
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pacman
        app.kubernetes.io/component: web
        app.kubernetes.io/version: stable
        app.kubernetes.io/part-of: pacman-cilium-demo
    spec:
      containers:
        - name: pacman
          image: docker.io/saintdle/pacman@sha256:65ad14f925133fe4a1f22f287c70cdb4d5b215b66c3d33efc300cd1542466533
          ports:
            - name: http
              containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pacman-canary
  labels:
    app.kubernetes.io/name: pacman
    app.kubernetes.io/component: web
    app.kubernetes.io/version: canary
    app.kubernetes.io/part-of: pacman-cilium-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pacman
      app.kubernetes.io/version: canary
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pacman
        app.kubernetes.io/component: web
        app.kubernetes.io/version: canary
        app.kubernetes.io/part-of: pacman-cilium-demo
    spec:
      containers:
        - name: pacman
          image: docker.io/saintdle/pacman@sha256:65ad14f925133fe4a1f22f287c70cdb4d5b215b66c3d33efc300cd1542466533
          ports:
            - name: http
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: pacman-stable
spec:
  selector:
    app.kubernetes.io/name: pacman
    app.kubernetes.io/version: stable
  ports:
    - name: http
      port: 8080
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: pacman-canary
spec:
  selector:
    app.kubernetes.io/name: pacman
    app.kubernetes.io/version: canary
  ports:
    - name: http
      port: 8080
      targetPort: http
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: pacman-gateway
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pacman-canary
spec:
  parentRefs:
    - name: pacman-gateway
  rules:
    - backendRefs:
        - name: pacman-stable
          port: 8080
          weight: 80
        - name: pacman-canary
          port: 8080
          weight: 20
